--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -44,6 +44,6 @@ td {
 </center>
 
 <script src="jquery.js"></script>
-<script src="game.js"></script>
+<script src="js/compiled/game.js"></script>
 </body>
 </html>
